# philly-250-hackathon

./: .gitignore  README.md  main.py
camera/: capture.py
camtest/: main.py  pyproject.toml
cv/: config.py  geo.py  imu.py  main.py  pyproject.toml
cv/camera/: capture.py
cv/detector/: background.py  clip_classifier.py  display.py  tracker.py
cv/scripts/: install_pi.sh  test_camera.py
detector/: background.py
esp32/: README.md
esp32/laptop_server/: flask_server.py
esp32/motor_control/: flash.sh  motor_control.ino  test_demo.sh  test_motor.sh  test_motor_backward.sh  test_motor_brake.sh  test_motor_stop.sh
esp32/motor_control/.claude/: settings.local.json
esp32/raspberry_pi/: send_usb_to_esp32.py
esp32/usb_wifi_bridge/: usb_wifi_bridge.ino
laser/: radio_protocol.py
laser/mcu1/Hackathon.X/: main.c
laser/mcu1/Hackathon.X/nbproject/: Makefile-default.mk  Makefile-genesis.properties  Makefile-impl.mk  Makefile-variables.mk  configurations.xml  project.xml
laser/mcu1/Hackathon.X/nbproject/private/: configurations.xml  private.xml
laser/mcu1/Hackathon.X/queuelogs/: debugtool.txt
laser/rpi/: README.md  counter_link.py  imu_radio_sender.py  light_tracker.py  lsm6dso.py  main.py  pi4_counter_node.py  pi5_counter_node.py  radio_receiver.py  servo_control.py  tracker_config.py
laser/telemetry/: imu_ground_receiver.py  main.py
rpi/gps/: gps.py  setup.sh
rpi/imu/: imu.py  setup.sh
scripts/: install_pi.sh
